--- a/content/projects/simplyfood.mdx
+++ b/content/projects/simplyfood.mdx
@@ -1,6 +1,6 @@
 ---
 title: Simplyfood
-description: An efficient system for managing recipe costs, providing accurate breakdowns of ingredient expenses to ensure optimal pricing and profitability.
+description: An online recipe costing app designed to help chefs, restaurateurs, food businesses, and home cooks accurately calculate the cost of preparing a recipe.
 date: 2024-05-26
 website: https://example.com/
 github: https://github.com/
@@ -18,20 +18,17 @@ This is a social app for food lovers where users can post, share, and discover r
 
 ## Features
 
-- **Recipe Posting**: Users can create and post their recipes with detailed instructions and photos.
-- **Recipe Discovery**: Search and explore recipes based on categories, cuisines, or ingredients.
-- **User Profiles**: Personalized profiles to showcase user-posted recipes and favorites.
-- **Comments and Likes**: Engage with the community by commenting on or liking recipes.
-- **Favorites**: Save recipes for quick access later.
+- **Ingredient Cost Calculator**: Automatically calculate the total cost of ingredients based on the recipe.
+- **Recipe Cost Breakdown**: Display a detailed breakdown of costs per ingredient.
+- **Portion Costing**: Calculate the cost per serving or portion.
+- **Recipe Scaling**: Scale recipes up or down to adjust for different batch sizes.
 
 ## Tech Stack
 
-- **Frontend**: Built with **React** for a dynamic and responsive user interface.
-- **Backend**: **Node.js** and **Express** for handling server-side logic and APIs.
-- **Database**: **MongoDB** for storing recipes, user profiles, and interactions.
+- **Frontend**: **Bootstrap** for a dynamic and responsive user interface.
+- **Backend**: **Laravel** for handling server-side logic.
+- **Database**: **MySQL** for storing recipes, user profiles, and interactions.
 - **Styling**: Designed with **CSS** and styled components for a visually appealing UI.
-- **Image Hosting**: Integrated with **Cloudinary** for uploading and managing recipe photos.
-- **Hosting**: Deployed on **Heroku** or **AWS** for backend and **Vercel** for the frontend.
 
 ## Implementation
 
