Update content and bug fix

--- a/content/projects/eco.mdx
+++ b/content/projects/eco.mdx
@@ -1,8 +1,7 @@
 ---
 title: ECO
-description: An efficient system for managing patient records.
+description: Designed to streamline the operations of medical clinics. It provides an integrated platform for managing patient records, appointments, ensuring efficient and error-free clinic operations.
 date: 2024-05-26
-website: https://example.com/
 github: https://github.com/dpe-developer/ECO
 tags:
   - label: Laravel
@@ -14,66 +13,25 @@ tags:
   - label: MySQL
 ---
 
-This is a social app for food lovers where users can post, share, and discover recipes from around the world. I built this app to combine my passion for food and technology, creating a platform where people can connect and share their culinary creations. The project allowed me to work on both front-end and back-end development, enhancing my full-stack development skills.
+This is a patient management app for clinics. Designed to streamline healthcare processes by efficiently managing patient information, medical records, and appointments. It enhances operational efficiency, reduces administrative workload, and improves patient care.
 
 ## Features
 
-- **Recipe Posting**: Users can create and post their recipes with detailed instructions and photos.
-- **Recipe Discovery**: Search and explore recipes based on categories, cuisines, or ingredients.
-- **User Profiles**: Personalized profiles to showcase user-posted recipes and favorites.
-- **Comments and Likes**: Engage with the community by commenting on or liking recipes.
-- **Favorites**: Save recipes for quick access later.
+- **Patient Registration & Records**: Stores detailed patient information, including personal details, medical history, and treatment records.
+- **Appointment Scheduling**: Book, reschedule, and track patient appointments.
+- **Electronic Medical Records (EMR)**: Digital storage of medical history, prescriptions, and diagnoses for easy access.
+- **Reporting & Analytics**: Generate reports on patient visits, and medical records.
 
 ## Tech Stack
 
-- **Frontend**: Built with **React** for a dynamic and responsive user interface.
-- **Backend**: **Node.js** and **Express** for handling server-side logic and APIs.
-- **Database**: **MongoDB** for storing recipes, user profiles, and interactions.
-- **Styling**: Designed with **CSS** and styled components for a visually appealing UI.
-- **Image Hosting**: Integrated with **Cloudinary** for uploading and managing recipe photos.
-- **Hosting**: Deployed on **Heroku** or **AWS** for backend and **Vercel** for the frontend.
+- **Frontend**: Built with **Bootstrap** and **JQuery** for a dynamic and responsive user interface.
+- **Backend**: **Laravel** for handling server-side logic and APIs.
+- **Database**: **MySQL** for storing patient records and appointments.
 
-## Implementation
-
-### Frontend
-
-- **React** used for reusable UI components.
-- **React Router** for navigating between pages like home, profiles, and recipe details.
-- **Axios** for API integration with the backend.
-
-### Backend
-
-- **Express.js** API endpoints for managing recipes, user authentication, and interactions.
-- **JWT** for secure user authentication.
-- Middleware for validating and uploading images using **Multer** and **Cloudinary**.
-
-### Database
-
-- **MongoDB** for storing structured data like users, recipes, and comments.
-- Indexed queries for fast search and retrieval.
-- Data relationships for linking recipes to user profiles.
-
-### Deployment
-
-- Backend deployed on **Heroku** with Dockerized containers.
-- Frontend deployed on **Vercel** with CI/CD for seamless updates.
 
 ## How It Works
 
-1. **User Onboarding**: Sign up or log in to start exploring and sharing recipes.
-2. **Post Recipes**: Upload recipes with images, categories, and detailed steps.
-3. **Discover Recipes**: Use search or filters to find recipes based on your taste.
-4. **Engage with Community**: Like, comment, and save your favorite recipes.
-5. **Personalize Profile**: Showcase your culinary creations on your profile page.
-
-## Challenges Faced
-
-- Managing large image uploads efficiently while maintaining performance.
-- Creating a seamless user experience for both desktop and mobile devices.
-- Ensuring database scalability to handle increasing recipe posts and user interactions.
-
-## Future Enhancements
-
-- Adding a meal planner feature for users to organize recipes for the week.
-- Introducing recipe video tutorials for better user engagement.
-- Implementing AI-powered suggestions for recipes based on user preferences.
+1. **Appointment Scheduling**: Patients can book, reschedule, or cancel appointments online or through staff.
+2. **Patient Registration & Record Creation**: A new patient is registered in the system by entering personal details, medical history, and insurance information. Existing patients have their records retrieved from the database.
+3. **Check-In & Consultation**: The doctor accesses the patient's medical history and current complaints. Consultation details, diagnosis, prescriptions, and recommended tests are recorded.
+4. **Prescription**: The doctor generates an e-prescription, which can be sent directly to a pharmacy.
