--- a/content/projects/itemaster.mdx
+++ b/content/projects/itemaster.mdx
@@ -27,9 +27,9 @@ Designed for businesses of all sizes, this intuitive platform helps you track st
 
 ## Tech Stack
 
-- **Frontend**: Bootstrap and JQuery for building dynamic and responsive user interfaces.
-- **Backend**: Laravel for handling server-side logic.
-- **Database**: MySQL for managing user data and inventory records.
+- **Frontend**: **Bootstrap** and **JQuery** for building dynamic and responsive user interfaces.
+- **Backend**: **Laravel** for handling server-side logic.
+- **Database**: **MySQL** for managing user data and inventory records.
 - **Hosting**: Deployed on a cloud platform with CI/CD for seamless updates.
 
 ## Implementation
