--- a/content/projects/portfolio.mdx
+++ b/content/projects/portfolio.mdx
@@ -2,8 +2,7 @@
 title: Personal Portfolio Website
 description: A personal portfolio to showcase your coding projects, resume, and skills in a beautifully designed format.
 date: 2024-05-26
-website: https://example.com/
-github: https://github.com/
+website: /
 tags:
   - label: HTML
   - label: CSS
