Add new project "H.O.P.E" and update hero and experience sections

--- a/content/projects/simplyfood.mdx
+++ b/content/projects/simplyfood.mdx
@@ -27,6 +27,8 @@ This is a social app for food lovers where users can post, share, and discover r
 - **Backend**: **Laravel** for handling server-side logic.
 - **Database**: **MySQL** for storing recipes, user profiles, and interactions.
 
+## How It Works
+
 1. **Ingredient Database**: Users input ingredients with cost per unit (e.g., per gram, ounce, liter).
 2. **Recipe Creation**: Users add ingredients to a recipe, specifying quantity used.
 3. **Cost Calculation**: The app calculates the total recipe cost based on ingredient quantities and unit costs.
