Update project dates and add Docker and Websocket tags to H.O.P.E and itemaster

--- a/content/projects/HOPE.mdx
+++ b/content/projects/HOPE.mdx
@@ -1,7 +1,7 @@
 ---
 title: H.O.P.E
 description: A comprehensive software solution designed to streamline and manage the operations of healthcare facilities
-date: 2024-05-26
+date: 2022-08-26
 tags:
   - label: Laravel
   - label: HTML
@@ -10,6 +10,7 @@ tags:
   - label: JavaScript
   - label: JQuery
   - label: MySQL
+  - label: Docker
 ---
 
 This is a patient management app for clinics/hospitals. Designed to streamline healthcare processes by efficiently managing patient information, medical records, and appointments. It enhances operational efficiency, reduces administrative workload, and improves patient care.
