--- a/content/projects/itemaster.mdx
+++ b/content/projects/itemaster.mdx
@@ -11,6 +11,8 @@ tags:
   - label: JavaScript
   - label: JQuery
   - label: MySQL
+  - label: Websocket
+  - label: Docker
 ---
 
 Designed for businesses of all sizes, this intuitive platform helps you track stock levels, automate reordering, and generate detailed reports—all in real-time. Accessible from any device, it simplifies inventory management, reduces errors, and boosts efficiency. Say goodbye to manual tracking and hello to seamless operations.
