--- a/content/projects/itemaster.mdx
+++ b/content/projects/itemaster.mdx
@@ -2,7 +2,7 @@
 title: Itemaster
 description: An Online Inventory System. Track stock levels, automate reorders, and generate real-time reports—all in one easy-to-use platform. Accessible from anywhere, it’s designed to save time, reduce errors, and keep your business running smoothly. Perfect for businesses of all sizes.
 date: 2023-12-01
-website: https://appdemo.itemaster.online/
+website: http://appdemo.itemaster.online
 tags:
   - label: Laravel
   - label: HTML
